--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export -o out",
+    "export": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -23,5 +23,8 @@
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
